kubernetes/gold-digger-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gold-digger-deployment
    labels:
        app: gold-digger
        tier: backend
        maintainer: python
spec:
    replicas: 3
    revisionHistoryLimit: 3
    selector:
        matchLabels:
            app: gold-digger
    template:
        metadata:
            labels:
                app: gold-digger
        spec:
            containers:
                -   name: golddigger-master
                    image: eu.gcr.io/roihunter-master/roihunter/golddigger:$BUILD_NUMBER
                    imagePullPolicy: Always
                    readinessProbe:
                        httpGet:
                            path: /health
                            port: 8080
                        initialDelaySeconds: 5
                        periodSeconds: 30
                        timeoutSeconds: 20
                    livenessProbe:
                        httpGet:
                            path: /health/alive
                            port: 8080
                        initialDelaySeconds: 5
                        periodSeconds: 30
                        timeoutSeconds: 10
                    lifecycle:
                        preStop:
                            exec:
                                command: ["/bin/bash", "-c", "sleep 10"]
                    ports:
                        -   containerPort: 8080
                    resources:
                        limits:
                            memory: "128Mi"
                            cpu: "500m"
                        requests:
                            memory: "128Mi"
                            cpu: "200m"
