kubernetes/gold-digger-cron-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: gold-digger-cron-deployment
    labels:
        app: gold-digger-cron
spec:
    replicas: 1
    selector:
        matchLabels:
            app: gold-digger-cron
    template:
        metadata:
            labels:
                app: gold-digger-cron
        spec:
            containers:
                - name: golddigger-cron-master
                  image: roihunter.azurecr.io/golddigger/master:$BUILD_NUMBER
                  imagePullPolicy: Always
                  readinessProbe:
                    exec:
                      command:
                          - echo
                          - 'OK!'
                    initialDelaySeconds: 5
                    periodSeconds: 10
                  command: ["python"]
                  args: ["-m", "gold_digger", "cron"]
                  ports: 
                    - containerPort: 8080
                  resources:
                    limits:
                      memory: "128Mi"
                      cpu: "300m"
            imagePullSecrets:
                - name: regsecret
