kubernetes/gold-digger-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: gold-digger-deployment
    labels:
        app: gold-digger
        tier: backend
        maintainer: python
spec:
    replicas: 3
    revisionHistoryLimit: 3
    selector:
        matchLabels:
            app: gold-digger
    template:
        metadata:
            labels:
                app: gold-digger
        spec:
            containers:
                - name: golddigger-master
                  image: roihunter.azurecr.io/golddigger/master:$BUILD_NUMBER
                  imagePullPolicy: Always
                  readinessProbe:
                    httpGet:
                      path: /health
                      port: 8080
                    initialDelaySeconds: 5
                    periodSeconds: 10
                  ports: 
                    - containerPort: 8080
            imagePullSecrets:
                - name: regsecret
