kubernetes/gold_digger.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: gold-digger-deployment
    labels:
        app: gold-digger
spec:
    replicas: 3
    selector:
        matchLabels:
            app: gold-digger
    template:
        metadata:
            labels:
                app: gold-digger
        spec:
            containers:
                - name: golddigger-master
                  image: roihunter.azurecr.io/golddigger/master:latest
                  imagePullPolicy: Always
                  ports: 
                    - containerPort: 8000
            imagePullSecrets:
                - name: regsecret

apiVersion: v1
kind: Service
metadata:
  labels:
    name: gold-digger-service
  name: gold-digger-service
spec:
  ports:
    # The port that this service should serve on.
    - port: 8000
  # Label keys and values that must match in order to receive traffic for this service.
  selector:
    app: gold-digger
  type: ClusterIP
